changes icon and demo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>drTranscribe - Medical Transcription</title>
+    <title>MedLog - Medical Transcription</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>drTranscribe</h1>
-            <p class="subtitle">Real-time Medical Transcription System</p>
+            <h1>MedLog</h1>
+            <p class="subtitle">Medical Conversations, Perfectly Logged</p>
         </header>
 
         <div class="patient-form" id="patientForm">
